--- a/Back/.env.example
+++ b/Back/.env.example
@@ -7,8 +7,8 @@ SPOTIFY_REDIRECT_URI=https://yourfrontend.com/auth/callback
 FRONTEND_URL=http://localhost:3000
 
 # Supabase (project URL + service role key)
-SUPABASE_URL=https://xyz.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+SUPABASE_URL=https://mofilwpvjglydhcytega.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sb_secret_9CGWbWI0PlRGGiKMrWP5NA_o2HG9dJk
 
 # JWT secret for session token generation
 APP_JWT_SECRET=some_long_secret
