--- a/Back/.env.example
+++ b/Back/.env.example
@@ -1,10 +1,15 @@
 # Spotify app
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-SPOTIFY_REDIRECT_URI=https://yourfrontend.com/auth/callback
+# Para desarrollo web: http://localhost:4000/auth/callback
+# Para producción: https://competify-hacktheshow.onrender.com/auth/callback
+SPOTIFY_REDIRECT_URI=https://competify-hacktheshow.onrender.com/auth/callback
 
 # Frontend redirect after login
-FRONTEND_URL=http://localhost:3000
+# Para desarrollo local: exp://localhost:8081
+# Para desarrollo móvil: competify://callback
+# Para producción web: https://tu-frontend.com
+FRONTEND_URL=competify://callback
 
 # Supabase (project URL + service role key)
 SUPABASE_URL=https://xyz.supabase.co
