--- a/Back/.env.example
+++ b/Back/.env.example
@@ -1,14 +1,16 @@
 # Spotify app
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
-# Para desarrollo web: http://localhost:4000/auth/callback
+# Para desarrollo: http://localhost:4000/auth/callback
 # Para producción: https://competify-hacktheshow.onrender.com/auth/callback
 SPOTIFY_REDIRECT_URI=https://competify-hacktheshow.onrender.com/auth/callback
 
-# Frontend redirect after login
-# Para desarrollo local: exp://localhost:8081
-# Para desarrollo móvil: competify://callback
-# Para producción web: https://tu-frontend.com
+# Base URL del backend (para construir URLs de callback)
+# Para desarrollo: http://localhost:4000
+# Para producción: https://competify-hacktheshow.onrender.com
+BASE_URL=https://competify-hacktheshow.onrender.com
+
+# DEPRECATED - Ya no se usa, se redirige a callback.html
 FRONTEND_URL=competify://callback
 
 # Supabase (project URL + service role key)
