--- a/Back/package.json
+++ b/Back/package.json
@@ -6,7 +6,12 @@
     "dev": "nodemon --watch src --exec node src/index.js",
     "start": "node src/index.js",
     "docker:build": "docker build -t spotify-listen-tracker .",
-    "docker:up": "docker-compose up --build"
+    "docker:up": "docker-compose up --build",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
@@ -17,6 +22,10 @@
     "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "cross-env": "^10.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^7.1.4"
   }
 }
